crates/cinrs-core/tests/snapshots/codegen__a_variably_modified_type_carries_its_bounds_in_hidden_objects.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate(r#\"\n        double corner(int n, int m) {\n            double a[n][m];\n            a[1][2] = 3;\n            double (*row)[m] = a;\n            return a[1][2] + (double)sizeof a + (double)sizeof row[0] + (*row)[0];\n        }\n\n        double at(int n, int m, double a[n][m], int i, int j) {\n            return a[i][j] + (double)(sizeof a[0] / sizeof a[0][0]);\n        }\n        \"#)"
---
mod __cinrs_unit_514a36ce {
    #![allow(…)]
    const _: () = { /* the data-model check */ };
    use self::__cinrs_vla_items::{__cinrs_vla_arena, __cinrs_vla_frame};
    mod __cinrs_vla_items {
        ::std::thread_local! {
            static __CINRS_VLA_SPARE : ::core::cell::UnsafeCell < ::std::vec::Vec <
            ::std::vec::Vec < ::std::vec::Vec < ::core::primitive::u128 > > > > = const {
            ::core::cell::UnsafeCell::new(::std::vec::Vec::new()) };
        }
        #[allow(
            unknown_lints,
            elided_lifetimes_in_paths,
            single_use_lifetimes,
            unused_qualifications,
            clippy::pedantic,
            clippy::nursery
        )]
        impl ::core::ops::Drop for __cinrs_vla_arena {
            #[inline]
            fn drop(&mut self) {
                let chunks = self.chunks.get_mut();
                if !chunks.is_empty() {
                    let _ = __CINRS_VLA_SPARE
                        .try_with(|lists| {
                            let kept = unsafe { &mut *lists.get() };
                            if kept.len() < 64 {
                                kept.push(::core::mem::take(chunks));
                            }
                        });
                }
            }
        }
        #[allow(
            unknown_lints,
            elided_lifetimes_in_paths,
            missing_debug_implementations,
            single_use_lifetimes,
            unused_qualifications,
            clippy::pedantic,
            clippy::nursery
        )]
        pub(super) struct __cinrs_vla_arena {
            chunks: ::core::cell::UnsafeCell<
                ::std::vec::Vec<::std::vec::Vec<::core::primitive::u128>>,
            >,
            cur: ::core::cell::Cell<::core::primitive::usize>,
            top: ::core::cell::Cell<::core::primitive::usize>,
            floor: ::core::cell::Cell<
                (::core::primitive::usize, ::core::primitive::usize),
            >,
        }
        #[allow(
            unknown_lints,
            elided_lifetimes_in_paths,
            single_use_lifetimes,
            unused_qualifications,
            clippy::pedantic,
            clippy::nursery
        )]
        impl __cinrs_vla_arena {
            #[inline(always)]
            pub(super) fn new() -> Self {
                Self {
                    chunks: ::core::cell::UnsafeCell::new(::std::vec::Vec::new()),
                    cur: ::core::cell::Cell::new(0),
                    top: ::core::cell::Cell::new(0),
                    floor: ::core::cell::Cell::new((0, 0)),
                }
            }
            #[inline(always)]
            pub(super) fn mark(
                &self,
            ) -> (::core::primitive::usize, ::core::primitive::usize) {
                (self.cur.get(), self.top.get())
            }
            #[inline(always)]
            pub(super) fn frame(&self) -> __cinrs_vla_frame<'_> {
                __cinrs_vla_frame(self, self.mark())
            }
            /// Moves the position back down to `mark`, but never below
            /// `floor` and never up.
            #[inline(always)]
            pub(super) fn release(
                &self,
                mark: (::core::primitive::usize, ::core::primitive::usize),
            ) {
                let floor = self.floor.get();
                let to = if mark > floor { mark } else { floor };
                if to < self.mark() {
                    self.cur.set(to.0);
                    self.top.set(to.1);
                }
            }
            #[inline(always)]
            pub(super) fn bytes(
                &self,
                bytes: ::core::primitive::usize,
                align: ::core::primitive::usize,
            ) -> *mut ::core::primitive::u8 {
                unsafe {
                    let chunks = &mut *self.chunks.get();
                    let top = self.top.get();
                    if let ::core::option::Option::Some(chunk) = chunks
                        .get_mut(self.cur.get())
                    {
                        let base = chunk.as_mut_ptr().cast::<::core::primitive::u8>();
                        let size = chunk.len()
                            * ::core::mem::size_of::<::core::primitive::u128>();
                        let start = top
                            + (base.addr().wrapping_add(top).wrapping_neg()
                                & (align - 1));
                        if start <= size && bytes <= size - start {
                            self.top.set(start + bytes);
                            let first = base.add(start);
                            ::core::ptr::write_bytes(first, 0, bytes);
                            return first;
                        }
                    }
                }
                self.grow(bytes, align)
            }
            #[cold]
            #[inline(never)]
            fn grow(
                &self,
                bytes: ::core::primitive::usize,
                align: ::core::primitive::usize,
            ) -> *mut ::core::primitive::u8 {
                {
                    let chunks = unsafe { &mut *self.chunks.get() };
                    if chunks.is_empty()
                        && __CINRS_VLA_SPARE
                            .try_with(|lists| {
                                match unsafe { (*lists.get()).pop() } {
                                    ::core::option::Option::Some(list) => {
                                        *chunks = list;
                                        true
                                    }
                                    ::core::option::Option::None => false,
                                }
                            })
                            .unwrap_or(false)
                    {
                        return self.bytes(bytes, align);
                    }
                }
                let need = bytes
                    .checked_add(align)
                    .expect(
                        "a variable length array or alloca is larger than the address space",
                    );
                {
                    let chunks = unsafe { &mut *self.chunks.get() };
                    let next = if chunks.is_empty() { 0 } else { self.cur.get() + 1 };
                    let unit = ::core::mem::size_of::<::core::primitive::u128>();
                    let fits = match chunks.get(next) {
                        ::core::option::Option::Some(chunk) => chunk.len() * unit >= need,
                        ::core::option::Option::None => false,
                    };
                    if !fits {
                        let last = match chunks.last() {
                            ::core::option::Option::Some(chunk) => chunk.len() * unit,
                            ::core::option::Option::None => 0,
                        };
                        chunks.truncate(next);
                        let size = need.max(last.saturating_mul(2)).max(4096);
                        chunks
                            .push(
                                ::std::vec::from_elem(
                                    0,
                                    size
                                        .div_ceil(::core::mem::size_of::<::core::primitive::u128>()),
                                ),
                            );
                    }
                    self.cur.set(next);
                    self.top.set(0);
                }
                self.bytes(bytes, align)
            }
            /// `count` zeroed elements of `T`.
            #[inline(always)]
            pub(super) fn alloc<T>(&self, count: ::core::primitive::usize) -> *mut T {
                self.alloc_aligned::<T>(count, 1)
            }
            /// `count` zeroed elements of `T`, the first at a multiple of
            /// `align` if that is stricter than `T`'s own alignment.
            #[inline(always)]
            pub(super) fn alloc_aligned<T>(
                &self,
                count: ::core::primitive::usize,
                align: ::core::primitive::usize,
            ) -> *mut T {
                let bytes = count
                    .checked_mul(::core::mem::size_of::<T>())
                    .expect("a variable length array is larger than the address space");
                let natural = ::core::mem::align_of::<T>();
                self.bytes(bytes, if align > natural { align } else { natural })
                    .cast::<T>()
            }
            /// `size` zeroed bytes, 16-byte aligned, that no frame gives
            /// back: they live until the arena is dropped.
            #[inline(always)]
            pub(super) fn alloca(
                &self,
                size: ::core::primitive::usize,
            ) -> *mut ::core::ffi::c_void {
                let first = self.bytes(size, 16);
                self.floor.set(self.mark());
                first.cast::<::core::ffi::c_void>()
            }
            /// A CFG-mode variable length array's declaration reached:
            /// gives back what its previous pass took, and everything
            /// allocated after that, and records where this one starts.
            #[inline]
            pub(super) fn redefine(
                &self,
                marks: &mut [::core::option::Option<
                    (::core::primitive::usize, ::core::primitive::usize),
                >],
                slot: ::core::primitive::usize,
            ) {
                if let ::core::option::Option::Some(mine) = marks[slot] {
                    for mark in marks.iter_mut() {
                        if let ::core::option::Option::Some(other) = *mark {
                            if other >= mine {
                                *mark = ::core::option::Option::None;
                            }
                        }
                    }
                    self.release(mine);
                }
                marks[slot] = ::core::option::Option::Some(self.mark());
            }
        }
        #[allow(
            unknown_lints,
            elided_lifetimes_in_paths,
            missing_debug_implementations,
            single_use_lifetimes,
            clippy::pedantic,
            clippy::nursery
        )]
        pub(super) struct __cinrs_vla_frame<'a>(
            &'a __cinrs_vla_arena,
            (::core::primitive::usize, ::core::primitive::usize),
        );
        #[allow(
            unknown_lints,
            elided_lifetimes_in_paths,
            single_use_lifetimes,
            clippy::pedantic,
            clippy::nursery
        )]
        impl ::core::ops::Drop for __cinrs_vla_frame<'_> {
            #[inline(always)]
            fn drop(&mut self) {
                self.0.release(self.1);
            }
        }
    }
    pub unsafe extern "C" fn corner(
        mut n: ::core::ffi::c_int,
        mut m: ::core::ffi::c_int,
    ) -> ::core::ffi::c_double {
        unsafe {
            let __cinrs_vla = __cinrs_vla_arena::new();
            let mut __cinrs_vla_len_a: ::core::ffi::c_ulong = m as ::core::ffi::c_ulong;
            let mut __cinrs_vla_len1_a: ::core::ffi::c_ulong = n as ::core::ffi::c_ulong;
            let __cinrs_vla_frame_a = __cinrs_vla.frame();
            let mut a: *mut ::core::ffi::c_double = __cinrs_vla
                .alloc_aligned::<
                    ::core::ffi::c_double,
                >(
                    __cinrs_vla_len_a.wrapping_mul(__cinrs_vla_len1_a)
                        as ::core::primitive::usize,
                    16,
                );
            let __cinrs_tmp0 = (a
                .offset(
                    (1 as ::core::primitive::isize)
                        .wrapping_mul(__cinrs_vla_len_a as ::core::primitive::isize),
                ) as *mut ::core::ffi::c_double)
                .offset(2);
            (*__cinrs_tmp0) = 3.0;
            let mut __cinrs_vla_len_row: ::core::ffi::c_ulong = m
                as ::core::ffi::c_ulong;
            let mut row: *mut ::core::ffi::c_double = a as *mut ::core::ffi::c_double;
            return ({
                let __cinrs_tmp1 = (a
                    .offset(
                        (1 as ::core::primitive::isize)
                            .wrapping_mul(__cinrs_vla_len_a as ::core::primitive::isize),
                    ) as *mut ::core::ffi::c_double)
                    .offset(2);
                (*__cinrs_tmp1)
            })
                + __cinrs_vla_len_a.wrapping_mul(__cinrs_vla_len1_a).wrapping_mul(8)
                    as ::core::ffi::c_double
                + __cinrs_vla_len_row.wrapping_mul(8) as ::core::ffi::c_double
                + ({
                    let __cinrs_tmp2 = (row as *mut ::core::ffi::c_double).offset(0);
                    (*__cinrs_tmp2)
                });
        }
    }
    pub unsafe extern "C" fn at(
        mut n: ::core::ffi::c_int,
        mut m: ::core::ffi::c_int,
        mut a: *mut ::core::ffi::c_double,
        mut i: ::core::ffi::c_int,
        mut j: ::core::ffi::c_int,
    ) -> ::core::ffi::c_double {
        unsafe {
            let mut __cinrs_vla_len_a: ::core::ffi::c_ulong = m as ::core::ffi::c_ulong;
            return ({
                let __cinrs_tmp0 = (a
                    .offset(
                        (i as ::core::primitive::isize)
                            .wrapping_mul(__cinrs_vla_len_a as ::core::primitive::isize),
                    ) as *mut ::core::ffi::c_double)
                    .offset(j as ::core::primitive::isize);
                (*__cinrs_tmp0)
            }) + (__cinrs_vla_len_a.wrapping_mul(8) / 8) as ::core::ffi::c_double;
        }
    }
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_514a36ce::*;
